--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,9 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +26,15 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.all-plants {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+  text-align: center;
+}
+
+.plant {
+  width: 200px;
 }
